<?php
namespace DesignPatterns\Behavioral\State;

interface AbstractState
{
     public function start();
     public function end();
}