<?php
namespace DesignPatterns\Behavioral\State;

class EndedState implements  AbstractState
{
    public function start()
    {

    }

    public function end()
    {

    }
}