<?php
namespace DesignPatterns\Behavioral\State;

class StartedState implements  AbstractState
{
    public function start()
    {

    }

    public function end()
    {

    }
}