<?php
namespace DesignPatterns\Behavioral\State;

class UnStartedState implements  AbstractState
{
    public function start()
    {

    }

    public function end()
    {

    }
}